BACKLOG-17186: Fix Chip markaup and align headers/cells

--- a/src/javascript/SelectorTypes/Picker/reactTable/columns/Cells.scss
+++ b/src/javascript/SelectorTypes/Picker/reactTable/columns/Cells.scss
@@ -4,6 +4,10 @@
     }
 }
 
+.cellLocation {
+    flex-grow: 2;
+}
+
 .location {
     display: flex;
     flex-direction: row;
