--- a/src/javascript/editorTabs/AdvancedOptions/Usages/Usages.scss
+++ b/src/javascript/editorTabs/AdvancedOptions/Usages/Usages.scss
@@ -19,3 +19,7 @@
 .marginRight {
     margin-right: var(--spacing-big);
 }
+
+.header-location {
+    flex-grow: 2;
+}
